--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -22,24 +22,26 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-          # black is a python code formatter. See: https://black.readthedocs.io/
-          # install black if available (Python 3.6 and above), and autopep8 for testing the pipe mode
-          pip install black || true
-          # autopep8 is another python code formatter
+          
+          # Install program analysis tools
+          pip install black flake8 autopep8 || true
           pip install autopep8 || true
-          # install sphinx_gallery and matplotlib if available (may not work on pypy)
-          pip install sphinx_gallery || true
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+
           # all Python files should follow PEP8 (except some notebooks, see setup.cfg)
           flake8 jupytext tests
+
           # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --statistics
+
       - name: Install from source (required for the pre-commit tests)
         run: pip install .
+
       - name: Test with pytest
         run: pytest --cov=./ --cov-report=xml
+
       - name: Upload coverage
         uses: codecov/codecov-action@v1
