--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -37,8 +37,8 @@ jobs:
           # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
           flake8 python --count --exit-zero --max-complexity=10 --statistics
 
-      - name: Install from source (required for the pre-commit tests)
-        run: pip install .
+      #- name: Install from source (required for the pre-commit tests)
+      #  run: pip install .
 
       - name: Test with pytest
         run: pytest --cov=./ --cov-report=xml
