--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Test with pytest
         run: pytest --cov=./ --cov-report=xml
 
-      - name: Upload coverage
-        uses: codecov/codecov-action@v1
+      #- name: Upload coverage
+      #  uses: codecov/codecov-action@v1
