--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -42,7 +42,7 @@ jobs:
       #  run: pip install .
 
       - name: Test with pytest
-        run: pytest --cov=./ --cov-report=xml
+        run: pytest --cov=./ --cov-report=xml python
 
       #- name: Upload coverage
       #  uses: codecov/codecov-action@v1
