--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -41,7 +41,12 @@ jobs:
       #- name: Install from source (required for the pre-commit tests)
       #  run: pip install .
 
-      - name: Test with pytest
+      - name: Test with pytest and SECRETS
+        env:
+          TMP_DBWRITER_HOSTNAME: ${{ secrets.TMP_DBWRITER_HOSTNAME }}
+          TMP_DBWRITER_DATABASE: ${{ secrets.TMP_DBWRITER_DATABASE }}
+          TMP_DBWRITER_USERNAME: ${{ secrets.TMP_DBWRITER_USERNAME }}
+          TMP_DBWRITER_PASSWORD: ${{ secrets.TMP_DBWRITER_PASSWORD }}
         run: pytest --cov=./ --cov-report=xml python
 
       #- name: Upload coverage
