--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ctools"]
 	path = ctools
-	url = https://github.com/joedinsmoor/ctools.git
+	url = https://github.com/simsong/ctools.git
