--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -20,13 +20,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          
-          # Install program analysis tools
-          pip install black flake8 autopep8 || true
-          pip install autopep8 || true
+          pip install --user -r requirements.txt
+          pip install --user -r requirements-dev.txt
+
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
