--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ctools"]
 	path = ctools
 	url = https://github.com/simsong/ctools.git
+[submodule "python/ctools"]
+	path = python/ctools
+	url = https://github.com/simsong/ctools.git
