--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           export PATH=$HOME/.local/bin:$PATH
+          printenv
           python -m pip install --upgrade pip
           pip install --user -r requirements.txt
           pip install --user -r requirements-dev.txt
