--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Lint with flake8
         run: |
+          printenv
+          export PATH=$HOME/.local/bin:$PATH
+
           # stop the build if there are Python syntax errors or undefined names
           flake8 python --count --select=E9,F63,F7,F82,W91,W293,W391 --show-source --statistics
 
