--- a/python/.pylintrc
+++ b/python/.pylintrc
@@ -1,3 +1,6 @@
+# Update this file with
+# pylint --generate-rcfile
+
 [MASTER]
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
