--- a/python/Makefile
+++ b/python/Makefile
@@ -1,7 +1,7 @@
 SHELL=/bin/bash
 
 pylint:
-	pylint --rcfile .pylintrc  --verbose  *.py
+	pylint --rcfile .pylintrc  --verbose  *.py   --fail-under 5
 
 pytest:
 	python3 -m pytest .
