--- a/python/.pylintrc
+++ b/python/.pylintrc
@@ -1,3 +1,6 @@
+# Update this file with
+# pylint --generate-rcfile
+
 [MASTER]
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
@@ -154,7 +157,7 @@ max-module-lines=1000
 # separator` is used to allow tabulation in dicts, etc.: {1  : 1,\n222: 2}.
 # `trailing-comma` allows a space between comma and closing bracket: (a, ).
 # `empty-line` allows space-only lines.
-no-space-check=trailing-comma,dict-separator
+# no-space-check=trailing-comma,dict-separator
 
 # Allow the body of a class to be on the same line as the declaration if body
 # contains single statement.
@@ -240,13 +243,13 @@ spelling-store-unknown-words=no
 [BASIC]
 
 # Naming hint for argument names
-argument-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
+# argument-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 
 # Regular expression matching correct argument names
 argument-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 
 # Naming hint for attribute names
-attr-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
+# attr-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 
 # Regular expression matching correct attribute names
 attr-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
@@ -255,19 +258,19 @@ attr-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 bad-names=foo,bar,baz,toto,tutu,tata
 
 # Naming hint for class attribute names
-class-attribute-name-hint=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
+# class-attribute-name-hint=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
 
 # Regular expression matching correct class attribute names
 class-attribute-rgx=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
 
 # Naming hint for class names
-class-name-hint=[A-Z_][a-zA-Z0-9]+$
+# class-name-hint=[A-Z_][a-zA-Z0-9]+$
 
 # Regular expression matching correct class names
 class-rgx=[A-Z_][a-zA-Z0-9]+$
 
 # Naming hint for constant names
-const-name-hint=(([A-Z_][A-Z0-9_]*)|(__.*__))$
+# const-name-hint=(([A-Z_][A-Z0-9_]*)|(__.*__))$
 
 # Regular expression matching correct constant names
 const-rgx=(([A-Z_][A-Z0-9_]*)|(__.*__))$
@@ -279,7 +282,7 @@ docstring-min-length=-1
 # Naming hint for function names
 #function-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 # NONDEFAULT
-function-name-hint=[a-z][a-zA-Z0-9]+$
+# function-name-hint=[a-z][a-zA-Z0-9]+$
 
 # Regular expression matching correct function names
 #function-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
@@ -295,7 +298,7 @@ good-names=i,j,k,ex,Run,y,x,_
 include-naming-hint=no
 
 # Naming hint for inline iteration names
-inlinevar-name-hint=[A-Za-z_][A-Za-z0-9_]*$
+# inlinevar-name-hint=[A-Za-z_][A-Za-z0-9_]*$
 
 # Regular expression matching correct inline iteration names
 inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
@@ -303,7 +306,7 @@ inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
 # Naming hint for method names
 # method-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 # NONDEFAULT
-method-name-hint=[a-z][a-zA-Z0-9]+$
+# method-name-hint=[a-z][a-zA-Z0-9]+$
 
 # Regular expression matching correct method names
 # method-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
@@ -313,7 +316,7 @@ method-rgx=_{0,2}[a-z][a-zA-Z0-9]+_{0,2}$
 # Naming hint for module names
 #module-name-hint=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
 # NONDEFAULT
-module-name-hint=([a-z][a-z_]*[a-z])$
+# module-name-hint=([a-z][a-z_]*[a-z])$
 
 # Regular expression matching correct module names
 #module-rgx=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
@@ -333,7 +336,7 @@ no-docstring-rgx=^_
 property-classes=abc.abstractproperty
 
 # Naming hint for variable names
-variable-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
+# variable-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
 
 # Regular expression matching correct variable names
 variable-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
