--- a/.github/workflows/continuous-integration-pip.yml
+++ b/.github/workflows/continuous-integration-pip.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Lint with pylint
         run: |
+          pip install pylint
           make pylint
 
       #- name: Install from source (required for the pre-commit tests)
@@ -41,6 +42,7 @@ jobs:
           TMP_DBWRITER_USERNAME: ${{ secrets.TMP_DBWRITER_USERNAME }}
           TMP_DBWRITER_PASSWORD: ${{ secrets.TMP_DBWRITER_PASSWORD }}
         run: |
+          pip install pytest
           make coverage
 
       - name: Upload coverage
