--- a/python/Makefile
+++ b/python/Makefile
@@ -7,7 +7,7 @@ pytest:
 	python3 -m pytest .
 
 dump-schema:
-	source $$HOME/dbwriter.bash && dbdump --no-data --column-statistics=0 --no-tablespaces --single-transaction=TRUE > schema.sql
+	source $$HOME/dbwriter.bash && dbdump --no-data --no-tablespaces --single-transaction=TRUE > schema.sql
 
 dump-db:
 	source $$HOME/dbwriter.bash && dbdump -d > database-$$(date -I).backup.sql
