--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,6 @@ jobs:
         eval $(ssh-agent)
         ssh-add - <<< "${{ secrets.DCWRITER_SSH_KEY }}"
         ssh-add -l
-        ssh -o StrictHostKeyChecking=no dcwriterr@downloads.digitalcorpora.org "cd digitalcorpora-stats;git pull --recurse-submodules; make install-dependencies"
+        ssh -o StrictHostKeyChecking=no dcwriterr@downloads.digitalcorpora.org \
+            "cd digitalcorpora-stats;git pull --recurse-submodules; make install-dependencies"
         echo The PR was merged
