--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,6 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -22,5 +21,6 @@ jobs:
           eval $(ssh-agent)
           ssh-add - <<< "${{ secrets.DCWRITER_SSH_KEY }}"
           ssh-add -l
-          ssh -o StrictHostKeyChecking=no dcwriter@downloads.digitalcorpora.org "cd digitalcorpora-stats;git pull --recurse-submodules; make install-dependencies"
+          ssh -o StrictHostKeyChecking=yes -o GlobalKnownHostsFile=etc/known_hosts dcwriter@downloads.digitalcorpora.org \
+                  "cd digitalcorpora-stats;git pull --recurse-submodules; make install-dependencies"
           echo The PR was merged
